fix styling on tablet landscape

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -464,7 +464,7 @@ header {
 #correct-score {
     display: flex;
     align-items: center;
-    color: var(--white);
+    color: var(--light-touch-color);
     font-weight: bold;
 }
 
@@ -643,7 +643,7 @@ footer {
     /* Hero Section */
     .hero {
         padding: 0;
-        
+    
         p {
             display: none;
         }
@@ -814,45 +814,66 @@ footer {
 
     .hero {
         padding: 1rem;
-        
         h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin: 1rem 0 0.5rem 0 !important;
             
         }
-    }
 
-    #game-field {
-        padding: 0.5rem;
-        
-        #task {
-            flex-direction: row !important;
-            justify-content: flex-start;
-            gap: 1rem !important;
-            
-            .calculation {
-                display: flex;
-                align-items: center;
+        .score-container {
+            flex-direction: row;
+            justify-content: center;
+            gap: 2rem;
+            margin: 1rem 0;
+            padding-bottom: 1rem;
+    
+            .score { 
+                gap: 1.5rem;
+                font-size: 1.5rem;
+                padding: 0;
             }
-            
-            #calculation, 
-            #equal, 
-            #result {
-                margin: 0 0.2rem;
+            #clear-score, #start-btn {
+                font-size: 1.3rem;
             }
+    
             
-            .result-container {
-                width: 120px;
+        }
+    
+        #game-field {
+            padding: 1rem;
+            
+            #task {
+                flex-direction: row !important;
+                justify-content: flex-start;
+                gap: 0 !important;
+
+                
+                .calculation {
+                    display: flex;
+                    align-items: center;
+                }
+                
+                #calculation, 
+                #operation {
+                    margin: 0;
+                    padding: 0;
+                }
+    
+                #equal {
+                    display: flex;
+                    margin-left: .5rem;
+
+                }
+
+    
+                .result-container {
+                    width: 120px;
+                }
             }
         }
     }
 
-    .score-container {
-        flex-direction: row;
-        justify-content: center;
-        gap: 2rem;
-        margin: 0;
-    }
+    
 
     footer {
         padding: 0.5rem 0;
